# Dev-AID

./: .coverage  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .shellcheckrc  ALL_PHASES_COMPLETION.md  BASH-SCRIPTS-REVIEW.md  BETA-TESTERS.md  BETA_RELEASE_NOTES.md  CHANGELOG.md  CLAUDE-REFERENCE.md  CLAUDE.md  CLAUDE.md.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_ANALYSIS.md  DEV-AID-IMPLEMENTATION-PLAN.md  GOOGLE_GENAI_MIGRATION.md  LICENSE  NOT-IMPLEMENTED.md  PR_DESCRIPTION.md  PYTHON-SKILL-REVIEW.md  QUICK-START.md  README.md  README2.md  RELEASE.html  ROUTER-STATUS.md  SECURITY.md  SPONSORS.md  STEP1_COMPLETION.md  STEP2_COMPLETION.md  TODO-MONETIZATION-IDEAS.md  UPGRADE_PLAN.md  VALUE-PROPOSITION.md  WHATS-NEW.md  coverage.xml  install.sh-compliance-report.md  release.sh
.claude/commands/: validate-ci.md
.dev-aid/: CHANGELOG.md  HOST_PROJECT.md  RAG-SETUP.md  VERSION
.dev-aid/agents/: __init__.py  cli.py
.dev-aid/analysis/: PRE-IMPLEMENTATION-CHECKLIST.md  SUMMARY.md  agent-integration-quick-start.md  agent-repositories-analysis.md  refactor-planner-adaptation-example.md
.dev-aid/architecture-locks/: README.md
.dev-aid/automation/: README.md
.dev-aid/config/: .env.example  agents.json  agents.toon  automation.yml  core-skills.json  core-skills.toon  golden-tests.json  golden-tests.toon  mcp-template.json  mcp-template.toon  models.json  models.toon  orchestration.json  orchestration.toon  process-skills.json  process-skills.toon  research.json  research.toon  routing.json  routing.toon  search.json  search.toon  settings.json  settings.toon  skill-rules.toon  supply-chain.json  supply-chain.toon  teams.json  teams.toon
.dev-aid/deep-research/: __init__.py  pyproject.toml
.dev-aid/deep-research/cache/: __init__.py  research_cache.py
.dev-aid/deep-research/mcp_server/: __init__.py  cli.py  server.py  validation.py
.dev-aid/deep-research/providers/: __init__.py  base.py  gemini_deep.py  perplexity.py  tavily.py
.dev-aid/deep-research/routing/: __init__.py  smart_router.py
.dev-aid/deep-research/tests/: __init__.py  conftest.py  test_cache.py  test_providers.py  test_routing.py
.dev-aid/docs/: AGENT-CREDITS.md  AGENTS.md  AUTO-CI-ARCHITECT.md  AUTO-POPULATE-ENHANCEMENT.md  AUTOMATION-GUIDE.md  AUTOMATION-README.md  BETA-LAUNCH-CHECKLIST.md  BETA-TESTING-GUIDE.md  BRANDING-GUIDE.md  CI-FREQUENCY-GUIDE.md  CI-GENERATOR-GUIDE.md  CI-OPTIMIZATION-GUIDE.md  CLAUDE-MD-INITIALIZATION-PLAN.md  COMMANDS-REFERENCE.md  COMPONENTS-MANIFEST.md  CONFLICT-RESOLVER-GUIDE.md  CONTEXT-SHARING.md  DEEP-RESEARCH-GUIDE.md  DEMO-SCRIPT.md  DEPENDENCY-ISOLATION.md  DEV-AID-STYLE-GUIDE.md  Dev-AID-AGENTS.md  (+37 more)
.dev-aid/local-search/: README.md  README_TESTS.md  pyproject.toml  pytest.ini
.dev-aid/local-search/chunking/: __init__.py  chunker.py
.dev-aid/local-search/embeddings/: __init__.py  embedder.py
.dev-aid/local-search/mcp_server/: __init__.py  cli.py  server.py  validation.py
.dev-aid/local-search/search/: __init__.py  bm25.py  hybrid_scorer.py  index.py
.dev-aid/local-search/tests/: __init__.py  conftest.py  test_chunker.py  test_embeddings.py  test_index.py  test_security.py
.dev-aid/local-search/utils/: __init__.py  security.py  storage.py
.dev-aid/orchestration/: .coverage  .pre-commit-config.yaml  CONTEXT-DETECTOR.md  DEPENDENCY_UPDATE_GUIDE.md  Makefile  ROUTER-INSTALL.md  SECURITY.md  TESTING.md  VENV-INFO.md  architecture-mapper.py  check_text_io_encoding.py  ci-generator.py  conflict_resolver.py  context-detector.py  coverage.xml  data-factory.py  detect-context-enhanced.sh  detect-context.sh  detect-imports.sh  doc-sync.py  fix_flake8.py  github_client.py  models-updater.py  package.json  pyproject.toml  requirements.txt  router-cli.sh  router.sh  run_security_checks.sh  select-skills.sh  setup-venv.sh  test_google_imports.py  test_google_migration.py  validate-bash-scripts.sh  validate-python-scripts.py
.dev-aid/orchestration/modes/: challenger.sh  ensemble.sh  none.sh  solo.sh
.dev-aid/orchestration/router/: README.md  __init__.py  __main__.py  api_clients.py  auth_detector.py  cli.py  config_loader.py  config_models.py  constants.py  context_builder.py  cost_tracker.py  dashboard.py  executor.py  hardware_detector.py  local_backends.py  local_client.py  mcp_client.py  mcp_registry.py  model_recommender.py  security_utils.py  task_classifier.py  token_estimation.py  validators.py
.dev-aid/orchestration/router/api_clients/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_client.py
.dev-aid/orchestration/router/modes/: __init__.py  _protocol.py  architect.py  challenger.py  ensemble.py  solo.py
.dev-aid/orchestration/tests/: README.md  __init__.py  conftest.py  run_tests.sh  test_agent_builtin_tools.py  test_agent_cli.py  test_agent_cli_handlers.py  test_agent_cost.py  test_agent_lessons.py  test_agent_models.py  test_agent_provider_adapters.py  test_agent_runner.py  test_agent_safety.py  test_agent_shared_state.py  test_agent_skill_loader.py  test_agent_team_models.py  test_agent_tool_registry.py  test_agent_trace_collector.py  test_api_clients.py  test_api_clients_vcr.py  test_api_clients_vcr.py.skip  test_architect_mode.py  test_audit_fixes.py  test_auth_detector.py  test_builtin_teams.py  test_challenger_ensemble_modes.py  test_ci_generator.py  test_config_loader.py  test_config_loader_extended.py  test_config_models.py  test_context_builder.py  test_cost_tracker.py  test_cost_tracker_extended.py  test_dashboard.py  test_doc_auditor.py  test_dod_gate.py  test_e2e.py  test_e2e_router.py  test_executor.py  test_executor_extended.py  (+20 more)
.dev-aid/orchestration/tests/cassettes/: README.md  anthropic_long_context.yaml  anthropic_simple_request.yaml  cross_provider_consistency.yaml  google_simple_request.yaml  openai_simple_request.yaml
.dev-aid/orchestration/toon/: __init__.py  converter.py  decoder.py  encoder.py
.github/: CODEOWNERS  FUNDING.yml  copilot-ignore  labeler.yml  pull_request_template.md
temp/: SKILL_AGENT_TEMPLATE.md  SKILL_MIGRATION_PLAN.md  TEMPLATE_COMPARISON.md
(+951 files in other folders)
