[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devaid-local-search"
version = "1.0.0"
description = "Dev-AID Local Search - 100% local semantic code search with MCP integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dev-AID Team"}
]

dependencies = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.7.4",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "tree-sitter-c>=0.20.0",
    "tree-sitter-cpp>=0.20.0",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu>=1.7.4",
]

[project.scripts]
devaid-code-search = "mcp_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "chunking", "embeddings", "search", "utils"]
