[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devaid-local-search"
version = "1.0.0"
description = "Dev-AID Local Search - 100% local semantic code search with MCP integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dev-AID Team"}
]

dependencies = [
    # SECURITY: All dependencies pinned to exact versions for reproducibility
    # and to prevent supply chain attacks. Update with caution.
    "sentence-transformers==3.0.1",
    "faiss-cpu==1.13.1",  # Latest version with Python 3.14 support
    "mcp==1.23.1",  # Latest stable (Dec 2, 2025) - fixes CVEs in earlier versions
    "pydantic==2.11.1",  # Required by mcp >= 1.23
    "click==8.1.8",
    "rich==13.9.4",
    "tree-sitter==0.23.2",
    "tree-sitter-python==0.23.6",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-java==0.23.4",
    "tree-sitter-go==0.23.3",
    "tree-sitter-rust==0.23.0",
    "tree-sitter-c==0.23.4",
    "tree-sitter-cpp==0.23.3",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu==1.8.0",
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
]

[project.scripts]
devaid-code-search = "mcp_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "chunking", "embeddings", "search", "utils"]
